tests/fixtures/diagnostics/type-checker/positive/basic-annotations/input.tysh
namespace Samples.TypeChecker.Positive

fun text(): string = "hello"

fun number(): int = 42

fun choose(flag: bool): string {
  if flag {
    "yes"
  } else {
    "no"
  }
}

fun main(): string {
  let greeting: string = text()
  let count: int = number()
  let matches: bool = count == 42
  greeting
}
