tests/fixtures/diagnostics/type-checker/negative/lock-value-type/input.tysh
namespace Samples.Lock.Negative

fun broken(): string {
  lock 42 {
    "ignored"
  }
  "done"
}
